<resources>
    <string name="app_name">Course_Registration</string>
    <string name="course_registraion">Select term to register</string>
    <string name="term2">Term2</string>
    <string name="term1">Term1</string>
    <string name="submit">Submit</string>
    <string name="Mycourses">Mycourses</string>
    <string name="term2courses">Select your courses!</string>
    <string name="course_name">Course Name</string>
    <string name="course_detail">Course Detail</string>
    <string name="course_description">Course Description</string>
    <string name="CS225_Health_Analytics">CS225 Health Analytics</string>
    <string name="my_courses">Registered Courses!</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textView7">TextView</string>
</resources>
